--- a/app/src/main/res/layout-ldrtl/welcome_user.xml
+++ b/app/src/main/res/layout-ldrtl/welcome_user.xml
@@ -28,6 +28,7 @@
             android:layout_width="0dp"
             android:enabled="false"
             android:layoutDirection="rtl"
+            android:textDirection="rtl"
             android:background="@drawable/edit_background"
             android:layout_weight="6"
             android:layout_height="match_parent"/>
@@ -49,7 +50,9 @@
             android:id="@+id/phoneNumber"
             android:layout_width="0dp"
             android:layoutDirection="rtl"
+            android:textDirection="rtl"
             android:enabled="false"
+            android:maxLength="10"
             android:background="@drawable/edit_background"
             android:layout_weight="6"
             android:layout_height="match_parent"/>
@@ -72,6 +75,7 @@
             android:layout_width="0dp"
             android:enabled="false"
             android:layoutDirection="rtl"
+            android:textDirection="rtl"
             android:layout_weight="6"
             android:background="@drawable/edit_background"
             android:layout_height="match_parent"/>
@@ -94,6 +98,7 @@
             android:layout_width="0dp"
             android:enabled="false"
             android:layoutDirection="rtl"
+            android:textDirection="rtl"
             android:background="@drawable/edit_background"
             android:layout_weight="6"
             android:layout_height="match_parent"/>
