Lint warnings and issues

--- a/app/src/main/res/layout-ldrtl/table_view.xml
+++ b/app/src/main/res/layout-ldrtl/table_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -15,10 +16,11 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/editText"
-            android:text="Email Id:"
+            android:text="@string/email_id"
             android:layout_width="0dp"
             android:layout_weight="0.5"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:ignore="NestedWeights" />
         <TextView
             android:id="@+id/emailId"
             android:layout_width="0dp"
@@ -35,10 +37,11 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/phNumText"
-            android:text="Phone Num:"
+            android:text="@string/phone_num"
             android:layout_width="0dp"
             android:layout_weight="0.5"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:ignore="NestedWeights" />
         <TextView
             android:id="@+id/phNum"
             android:layout_width="0dp"
@@ -55,10 +58,11 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/fNameText"
-            android:text="First Name:"
+            android:text="@string/first_name"
             android:layout_width="0dp"
             android:layout_weight="0.5"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:ignore="NestedWeights" />
         <TextView
             android:id="@+id/firstName"
             android:layout_width="0dp"
@@ -75,10 +79,11 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/lnameText"
-            android:text="Last Name:"
+            android:text="@string/last_name"
             android:layout_width="0dp"
             android:layout_weight="0.5"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:ignore="NestedWeights" />
         <TextView
             android:id="@+id/lastName"
             android:layout_width="0dp"
