--- a/app/src/main/res/layout-ldrtl/activity_main.xml
+++ b/app/src/main/res/layout-ldrtl/activity_main.xml
@@ -47,7 +47,8 @@
             android:hint="@string/enter_the_email_id"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            android:textColorHint="@color/black"/>
+            android:textColorHint="@color/black"
+            android:autofillHints="Email Id" />
 
         <EditText
             android:id="@+id/phoneNumber"
@@ -78,7 +79,8 @@
             android:hint="@string/first_name"
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColorHint="@color/black"/>
+            android:textColorHint="@color/black"
+            android:autofillHints="First Name" />
 
         <EditText
             android:id="@+id/lastName"
@@ -92,7 +94,8 @@
             android:hint="@string/last_name"
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColorHint="@color/black"/>
+            android:textColorHint="@color/black"
+            android:autofillHints="Last NAme" />
 
         <Button
             android:id="@+id/signIn"
