--- a/app/src/main/res/layout-ldrtl/user_list.xml
+++ b/app/src/main/res/layout-ldrtl/user_list.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical">
 
     <TextView
-        android:text="User Data"
-        android:textSize="20dp"
+        android:text="@string/user_data"
+        android:textSize="20sp"
         android:gravity="center"
         android:textColor="@color/black"
         android:layout_width="match_parent"
