--- a/app/src/main/res/layout-ldrtl/welcome_user.xml
+++ b/app/src/main/res/layout-ldrtl/welcome_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -12,7 +13,7 @@
         android:id="@+id/welcomeText"
         android:text="@string/welcome"
         android:padding="10sp"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -31,13 +32,17 @@
             android:textDirection="rtl"
             android:background="@drawable/edit_background"
             android:layout_weight="6"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:autofillHints="Email ID"
+            android:inputType="textEmailAddress"
+            tools:ignore="LabelFor" />
         <ImageButton
             android:id="@+id/editEmail"
             android:layout_width="0dp"
             android:src="@drawable/edit"
             android:layout_weight="1"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:contentDescription="@string/edit" />
     </LinearLayout>
 
     <LinearLayout
@@ -55,13 +60,17 @@
             android:maxLength="10"
             android:background="@drawable/edit_background"
             android:layout_weight="6"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:autofillHints="Phone Number"
+            android:inputType="number"
+            tools:ignore="LabelFor,TextFields" />
         <ImageButton
             android:id="@+id/editPhoneNumber"
             android:layout_width="0dp"
             android:src="@drawable/edit"
             android:layout_weight="1"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:contentDescription="@string/edit"/>
     </LinearLayout>
 
     <LinearLayout
@@ -78,13 +87,17 @@
             android:textDirection="rtl"
             android:layout_weight="6"
             android:background="@drawable/edit_background"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:autofillHints="First Name"
+            android:inputType="text"
+            tools:ignore="LabelFor" />
         <ImageButton
             android:id="@+id/editFirstName"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:src="@drawable/edit"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:contentDescription="@string/edit"/>
     </LinearLayout>
 
     <LinearLayout
@@ -101,13 +114,17 @@
             android:textDirection="rtl"
             android:background="@drawable/edit_background"
             android:layout_weight="6"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:autofillHints="Last Name"
+            android:inputType="text"
+            tools:ignore="LabelFor" />
         <ImageButton
             android:id="@+id/editLastName"
             android:layout_width="0dp"
             android:src="@drawable/edit"
             android:layout_weight="1"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:contentDescription="@string/edit"/>
     </LinearLayout>
 
     <Button
@@ -119,7 +136,7 @@
 
     <Button
         android:id="@+id/showAllUsers"
-        android:text="Show All Users"
+        android:text="@string/show_all_users"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
